qt4-x11 (4:4.8.6+git155-g716fbae+dfsg-3) UNRELEASED; urgency=medium

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * Remove dummy transitional packages libqt4-webkit[-dbg], libqt4-assistant,
    libqt4-gui and libqt4-core.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 05 May 2015 18:50:37 -0300

qt4-x11 (4:4.8.6+git155-g716fbae+dfsg-2) unstable; urgency=medium

  * The previous upload fixed CVE-2015-1858, CVE-2015-1859, CVE-2015-1860.
  * Update symbols files with buildds' logs.
  * Upload to unstable.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Thu, 30 Apr 2015 23:11:17 -0300

qt4-x11 (4:4.8.6+git155-g716fbae+dfsg-1) experimental; urgency=medium

  [ Lisandro Damián Nicanor Pérez Meyer ]
  * New upstream snapshot.
  * Remove aarch64_arm64_mkspecs.patch, as it's not really needed. Simply use
    platform_arg = linux-g++ for it.
  * Add two more files to override_dh_auto_clean.
  * Remove GStreamer 0.10's build dependencies. The real users of it
    should be using phonon with GStreamer 1.0.
  * Add a note for packagers on qt4-default's long description.
  * Remove patches applied upstream:
    - aarch64_arm64_fix_arch_detection.patch
    - fix_libmng_test.patch
    - ppc64el_configure_support.patch
    - cve-2015-0295.diff
  * Refresh multiple patches.
  * Update symbols files with buildds' logs.
  * Add remove_functions_not_in_qt4.patch for solving QTBUG-45463.
  * Add linguist's hebrew translation.
  * Update Standards-Version, no changes required.
  * Update lintian overrides.

  [ Dmitry Shachnev ]
  * Make qt4-qmake suggest libqtcore4, as that package contains configuration
    files for qtchooser, without which /usr/bin/qmake will not work.

 -- Lisandro Damián Nicanor Pérez Meyer <lisandro@debian.org>  Thu, 09 Apr 2015 12:02:13 -0300

qt4-x11 (4:4.8.6+git64-g5dc8b2b+dfsg-3) unstable; urgency=medium

  * Team upload.
  * Fix CVE-2015-0295 (DoS vulnerability in BMP images handler).
    Closes: #779550.
