@@ -1,8 +1,0 @@
-usr/include/qt4/QtCore/private/
-usr/include/qt4/QtDeclarative/private/
-usr/include/qt4/QtGui/private/
-usr/include/qt4/QtScript/private/
-usr/include/src/corelib/
-usr/include/src/declarative/
-usr/include/src/gui/
-usr/include/src/script/
