@@ -263,18 +263,6 @@ override_dh_auto_install:
 	# Remove libtool-like files
 	rm -fv debian/tmp/usr/lib/$(DEB_HOST_MULTIARCH)/*.la
 
-	# Ship private headers - ugly hack to build Qt Creator QML Designer
-	cd $(CURDIR)/include && rsync -aR QtCore/private \
-	                                  QtDeclarative/private \
-	                                  QtGui/private \
-	                                  QtScript/private \
-	                                  ../debian/tmp/usr/include/qt4/
-	cd $(CURDIR) && rsync -aR src/corelib/*/*_p.h \
-	                          src/declarative/*/*_p.h \
-	                          src/gui/*/*_p.h \
-	                          src/script/*/*_p.h \
-	                          debian/tmp/usr/include/
-
 	# Fix wrong path in pkgconfig files
 	find $(CURDIR)/debian/tmp/usr/lib/*/pkgconfig -type f -name '*.pc' \
 		-exec perl -pi -e "s, -L$(CURDIR)/?\S+,,g" {} \;
