@@ -3,6 +3,8 @@ qt4-x11 (4:4.8.6+git155-g716fbae+dfsg-3) UNRELEASED; urgency=medium
   [ Lisandro Damián Nicanor Pérez Meyer ]
   * Remove dummy transitional packages libqt4-webkit[-dbg], libqt4-assistant,
     libqt4-gui and libqt4-core.
+  * Remove libqt4-private-dev. The only package using it is gammaray (#763852)
+    which at the moment of this writing has it fixed in it's repo.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 05 May 2015 18:50:37 -0300
 
